--- a/ClientMVC/ClientMVC.csproj
+++ b/ClientMVC/ClientMVC.csproj
@@ -1,10 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Domain\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
@@ -16,11 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Restaurant.DataAccess\Restaurant.DataAccess.csproj" />
-    <ProjectReference Include="..\Restaurant.Library\Restaurant.Domain.csproj" />
   </ItemGroup>
 
- 
 
- 
 
 </Project>
