--- a/Restaurant.DataAccess/Restaurant.DataAccess.csproj
+++ b/Restaurant.DataAccess/Restaurant.DataAccess.csproj
@@ -5,15 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Restaurant.Interface\Restaurant.Interface.csproj" />
+    <ProjectReference Include="..\Restaurant.Library\Restaurant.Domain.csproj" />
   </ItemGroup>
 
 </Project>
