--- a/Restaurant.Library/Restaurant.Domain.csproj
+++ b/Restaurant.Library/Restaurant.Domain.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Restaurant.Interface\Restaurant.Interface.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
