tests project now can connect to the database. Thanks Jon!

--- a/Restaurant.DataAccess/Restaurant.DataAccess.csproj
+++ b/Restaurant.DataAccess/Restaurant.DataAccess.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>1849c45f-de6c-4dff-a9a8-4b1d3ec44d23</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +11,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
