--- a/ClientMVC/appsettings.json
+++ b/ClientMVC/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "DbRestaurantContext": "Server=tcp:2002-training-altamirano.database.windows.net,1433;Initial Catalog=DbRestaurant;Persist Security Info=False;User ID=haroldo;Password=EllieIs#1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
-  },
-  "AllowedHosts": "*"
 }
