mapper not implemented from domain to data model for store. Worked on it and the store controller wip

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.sln.docstates
 appsettings.json
 
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -31,6 +32,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+TestResults/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
